<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete_notes"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_viewChange"
        android:icon="@drawable/ic_grid_on_black_24dp"
        android:title="@string/change_view"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        android:orderInCategory="100"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
</menu>