<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="note"
            type="com.example.takenotesapp.database.Note"/>

        <variable
            name="clickListener"
            type="com.example.takenotesapp.listnotes.NoteListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(note)}">

        <TextView
            android:id="@+id/txt_title_list"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/titleList"
            app:titleList = "@{note}"
            app:layout_constraintBottom_toTopOf="@+id/txt_header_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_header_list"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_header"
            app:headerList = "@{note}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_list" />

        <TextView
            android:id="@+id/txt_edited_list"
            style="@android:style/Widget.Material.Light.DatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_date"
            app:editedList = "@{note}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>