<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="noteDetailsViewModel"
            type="com.example.takenotesapp.notedetail.NoteDetailVM" />
    </data>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            style="@style/AppTheme.NoActionBar"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:titleTextColor="@android:color/white">

        </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_title_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{noteDetailsViewModel.enable}"
                        android:hint="@string/titleList"
                        android:text="@={noteDetailsViewModel.note.title}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_header_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{noteDetailsViewModel.enable}"
                        android:hint="@string/hint_header"
                        android:text="@={noteDetailsViewModel.note.header}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_description_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="@{noteDetailsViewModel.enable}"
                        android:hint="@string/Descrip"
                        android:text="@={noteDetailsViewModel.note.descrip}" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_created_detail"
                    style="@android:style/Widget.DatePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimMargin16dp"
                    android:hint="@string/created_hint"
                    android:text="@{noteDetailsViewModel.created}" />

                <TextView
                    android:id="@+id/txt_edited_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimMargin16dp"
                    android:hint="@string/hint_date"
                    android:text="@{noteDetailsViewModel.lastEdited}" />

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimMargin16dp"
                    android:contentDescription="@string/note_image"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{noteDetailsViewModel.note.photo}" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_noteDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{ () -> noteDetailsViewModel.onEnabled()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_mode_edit_black_24dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>